--- a/todo.txt
+++ b/todo.txt
@@ -45,6 +45,8 @@ Finish Assemlber class assembling <-----------------start here
     test basic assembler functionality before dealing with labels and jumps
         assemble all nodes
         writer m_buf to output file <--------------------start here
+            assemble MOV
+            assemble INT
         test out.bin to see if it actually runs
     Refactor NodeLabelRef and NodeLabelDef assemble() functions - just copied original functions
         define Label class - what was the difference between ref_addr and rel_jump_addr
