Assemble more instructions - printing booleans working

--- a/todo.txt
+++ b/todo.txt
@@ -42,16 +42,67 @@ Look at this stackoverflow post for how machine code is structured: (THIS IS REA
 
 ******************************************Refactor to C++*********************************
 Finish Assemlber class assembling
+    Make a function or method to assemble LabeRef for relative jumps (used in CALL, JG, JMP)
+        assemble_label_ref_relative_jump(Assembler1& a, NodeLabelRef* n);
+        When are labels actually used???
     test basic assembler functionality before dealing with labels and jumps
         assemble remaining nodes - start with function calls
-            push (DONE)
-            pop (DONE)
-            call (DONE)
-            ret (DONE)
-            xor (DONE)
-            add (DONE)
-            Test with print_char
-            ...
+            get _print_bool working <-----------start here
+_print_bool:
+    push    ebp
+    mov     ebp, esp
+
+    mov     eax, [ebp + 8] 
+    cmp     eax, 0
+    jg      print_true
+
+    push    0x66
+    call    _print_char
+    add     esp, 4
+
+    push    0x61
+    call    _print_char
+    add     esp, 4
+
+    push    0x6c
+    call    _print_char
+    add     esp, 4
+
+    push    0x73
+    call    _print_char
+    add     esp, 4
+
+    push    0x65
+    call    _print_char
+    add     esp, 4
+
+    jmp     print_bool_end
+
+print_true:
+    push    0x74
+    call    _print_char
+    add     esp, 4
+
+    push    0x72
+    call    _print_char
+    add     esp, 4
+
+    push    0x75
+    call    _print_char
+    add     esp, 4
+
+    push    0x65
+    call    _print_char
+    add     esp, 4
+
+print_bool_end:
+
+    pop     ebp
+    xor     eax, eax
+    ret
+
+            get _print_digit working
+            get _print_int working
             [look at assembly.c for other instructions]
         remove assembler.hpp and assembler.cpp
         rename assembler1.hpp and assembler1.cpp
