--- a/todo.txt
+++ b/todo.txt
@@ -41,24 +41,33 @@ Look at this stackoverflow post for how machine code is structured: (THIS IS REA
     https://stackoverflow.com/questions/45526209/referencing-registers-in-machine-code
 
 ******************************************Refactor to C++*********************************
-Finish Assemlber class assembling
-        Add functions to parse negative numbers and basic terms (subtraction and addition) in assembler
-        fix bug with negative numbers not parsing/lexing properly
-            need to parse numbers (addition/subtraction/etc)
-            [ebp + 8]
-            [ebp - 8]
-            mov     eax, 8
-            mov     eax, -8
-            push    10
-            push    -10
+Need to stop assembly process if errors occur at lexing/parsing/assembly stages (or at least display error messages)
 
-            Note: Be sure to have lexer recognize PLUS/MINUS too
-            //TODO: parse_unary   <---------start here - add these three stages to parser in Assembler1.cpp/hpp
-            //TODO: parse_term
+Make new C++ class called Translater
+    TODO: these should be in a separate class or translation unit since they are shared for botht he assembler and translater
+        struct Token peek_one();
+        struct Token peek_two();
+        struct Token next_token();
+        struct Token consume_token(enum TokenType tt);
+        bool end_of_tokens();
+    translates .tmd file to assembly
+        put parser directly inside translater for now (similar to Assembler has nodes inside of it)
+    in future, will translate .tmd to intermediate representation (SSA, probably)
+    Then will have assembler translate to machine code
 
-        remove assembler.hpp and assembler.cpp
-        rename assembler1.hpp and assembler1.cpp
-        rename Assembler1 class to Assembler
+Remove lexer.hpp and lexer.cpp
+Rename lexer_new.hpp and lexer_new.cpp to lexer
+
+Make new C++ class called Linker
+    link multiple object files (where one has a 'main' function)
+    need to implement functions in tamarind
+
+    src.tmd -> Translater -> Assembler -> Linker
+    src.tmd -> Translater (tmd) -> Optimizer (SSA) -> Assembler (x86) -> Linker (ELF) -> out.bin
+
+Make a new C++ class called Optimizer
+    Have Translater output SSA
+    Have x86 Assembler read in SSA
 
 Switch over to c++ for these reasons:
     can switch to C if performance is necessary
@@ -80,152 +89,6 @@ Have assembler emit linkable ELF files along with executable ELF files
     any file with 'main' function can be executable
     need to implement functions in tamarind and set main as entry point
 
-********************************Assemble Executabel ELF********************************
-
-class Assembler {
-    public:
-        Assembler(struct TokenArray ta) {
-            m_ta = ta;
-        }
-
-        void emit_machine_code(const std::string& filename) {
-            parse(&m_na);
-            assemble(&buf);
-            write_file(filename);
-        }
-
-    private:
-        void parse(struct NodeArray* na) {
-
-        } 
-
-        void assemble(std::string buf) {
-
-        }
-
-        void write_file(const std::string& filename) {
-
-        } 
-
-    public:
-        struct TokenArray m_ta;
-        struct NodeArray m_na;
-        std::string buf;
-};
-
-Make new assembler in C++ asm
-    Make new parser
-    Make new assembler
-    make function emit_elf()
-
-*Refactor to simplify switch statement (no more nesting):
-
-    struct Instruction {
-        struct Token instruction;
-        struct Operand *op1; //NULL if unused
-        struct Operand *op2; //NULL if unused
-    };
-
-    struct Operand {
-        enum OperandType type;
-    };
-
-    struct RegOperand {
-        struct Operand operand;
-        struct Token reg;
-    };
-
-    struct Imm32Operand {
-        struct Operand operand;
-        struct Token imm;
-    };
-
-    struct Imm8Operand {
-        struct Operand operand;
-        struct Token imm;
-    };
-
-    struct MemOperand {
-        struct Operand operand;
-        struct Token reg;
-        struct Token displacement;
-    };
-
-    struct LabelOperand {
-        struct Operand operand;
-        struct Token label;
-    };
-
-    class Operand {
-        public:
-            Operand(enum OperandType type) {
-                m_type = type;
-            }
-
-        public: 
-            enum OperandType m_type;
-    };
-
-    class RegOperand: public Operand {
-        public:
-            RegOperand(enum Token reg): Operand(OT_REG) {
-                m_reg = reg;
-            }
-        public:
-            enum Token m_reg;
-    };
-
-    Operand* parse_operand(struct Parser p) {
-        enum Token t = parser_next(p);
-        switch(t) {
-            case T_L_BRACKET:
-                //memory access
-            case T_EAX:
-                //register
-            case T_LABEL_REF:
-                //label
-            case T_HEX:
-            case T_INT:
-                //immediate
-        }
-    }
-
-    Instruction* parse_instruction(struct Parser p) {
-        enum Token t = parser_next(p);
-        switch (t) {
-            case T_PUSH:
-            case T_POP:
-                Operand* operand = parse_operand(p);
-                return new Instruction(t, operand, NULL);
-            case T_RET:
-            case T_LABEL_DEF:
-                return new Instruction(t, NULL, NULL);
-            case T_ADD:
-            case T_IDIV:
-                Operand* operand1 = parse_operand(p);
-                Operand* operand2 = parse_operand(p);
-                return new Instruction(t, operand1, operand2);
-        }
-    }
-
-    Label definition is now an AStmt with no operands (both NULL)
-    Label references can be computed using a function
-    Immediates (8-bit and 32-bit) can be computed using a function
-
-Assemble _print_int
-    Add tokens for these instructions
-    parse these instructions
-    assemble these instructions - look at Intel reference for x86 
-
-        je      print_zero
-        test    eax, 0x80000000 ;hex for 2^31
-        jnz     do_negative
-        neg     eax
-        inc     edi
-        dec     edi 
-
-    *Note: using 'div' instruction in _print_int right now
-            can this be replaced with idiv, or is an unsigned division necessary here?
 
 Test compiler driver end-to-end (with only printing booleans for now
     Uncomment code so that compiler emits assembly
